# rtrs

./: .gitignore  Cargo.toml  README.md
assignments/: assignment-1.txt  assignment-2.txt  assignment-3.txt  assignment-4.txt
reports/: assignment-1.md  assignment-2.md  assignment-3.md  assignment-4.md
src/: basics.rs  camera.rs  cow.rs  main.rs  matrix.rs  mesh.rs  rasterizer.rs  ray_tracer.rs  render.rs  scene.rs  surface.rs
src/surface/: aabb.rs  mesh.rs  mod.rs  quadrics.rs  surface.rs
