[package]
name = "rtrs"
version = "0.1.0"
authors = ["Ivan Skorokhodov <iskorokhodov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.14"
derive_more = "0.99"
float-cmp = "0.8.0"
itertools = "0.9.0"
rayon = "1.4.0"
nalgebra = "0.23.0"
tobj = "2.0.2"
rand = "0.7"
